--- a/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="INegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="GestionUsuarios.cs" />
     <Compile Include="UtilMethods.cs" />
   </ItemGroup>
   <ItemGroup>
