--- a/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="INegocio.cs" />
+    <Compile Include="Negocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GestionUsuarios.cs" />
     <Compile Include="UtilMethods.cs" />
