--- a/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,10 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="INegocio.cs" />
-    <Compile Include="Negocio.cs" />
+    <Compile Include="INegocioService.cs" />
+    <Compile Include="NegocioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GestionUsuarios.cs" />
     <Compile Include="UtilMethods.cs" />
   </ItemGroup>
   <ItemGroup>
