--- a/ProyectoIntegracionBiocentro/CapaDTO/CapaDTO.csproj
+++ b/ProyectoIntegracionBiocentro/CapaDTO/CapaDTO.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reserva.cs" />
     <Compile Include="RolUsuario.cs" />
+    <Compile Include="StatusResponce.cs" />
     <Compile Include="Terapeuta.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
