se modifica el git

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ ProyectoIntegracionBiocentro/CapaPresentacion/bin
 ProyectoIntegracionBiocentro/CapaPresentacion/obj
 ProyectoIntegracionBiocentro/WindowsFormsApp1/bin
 ProyectoIntegracionBiocentro/WindowsFormsApp1/obj
+/ProyectoIntegracionBiocentro/AplicacionWeb
+/ProyectoIntegracionBiocentro/CapaServicio
