--- a/ProyectoIntegracionBiocentro/WindowsFormsApp1/ConsumidorAppDesktop.csproj
+++ b/ProyectoIntegracionBiocentro/WindowsFormsApp1/ConsumidorAppDesktop.csproj
@@ -80,7 +80,10 @@
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.buscarPacienteServiceResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.Especialidad.datasource">
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.EspecialidadClinica.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.EspecialidadTerapeuta.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.generarListaEspecialidadServiceResponse.datasource">
@@ -89,16 +92,28 @@
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.generarListaEspecialistaServiceResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.generarListaMedioPagoServiceResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.guardarVentaRealizadaServiceResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.HelloWorldResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.HoraAtencion.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.horasPorRutPacienteMasVentaServiceResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.listaReservasPorRutServiceResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.Persona.datasource">
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.MedioPago.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.Paciente.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.rechazarConfirmarReservaServiceResponse.datasource">
@@ -107,13 +122,7 @@
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.registrarPacienteServiceResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.Reserva.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.StatusResponce.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Connected Services\ServiceCliente\WindowsFormsApp1.ServiceCliente.Terapeuta.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
