--- a/ProyectoIntegracionBiocentro/AplicacionWeb/Web.config
+++ b/ProyectoIntegracionBiocentro/AplicacionWeb/Web.config
@@ -10,4 +10,19 @@
       <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="WebServiceClienteSoap">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap1" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
