--- a/ProyectoIntegracionBiocentro/AplicacionWeb/Web.config
+++ b/ProyectoIntegracionBiocentro/AplicacionWeb/Web.config
@@ -17,12 +17,47 @@
                     <security mode="Transport" />
                 </binding>
                 <binding name="WebServiceClienteSoap1" />
+                <binding name="WebServiceClienteSoap2">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap3" />
+                <binding name="WebServiceClienteSoap4">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap5" />
+                <binding name="WebServiceClienteSoap6">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap7" />
+                <binding name="WebServiceClienteSoap8">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap9" />
+                <binding name="WebServiceClienteSoap10">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="WebServiceClienteSoap11" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
                 binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap"
                 contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap" />
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap2"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap1" />
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap4"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap2" />
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap6"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap3" />
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap8"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap4" />
+            <endpoint address="https://localhost:44384/WebServiceCliente.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceClienteSoap10"
+                contract="ServiceCliente.WebServiceClienteSoap" name="WebServiceClienteSoap5" />
         </client>
     </system.serviceModel>
 </configuration>
