--- a/ProyectoIntegracionBiocentro/CapaPresentacion/CapaPresentacion.csproj
+++ b/ProyectoIntegracionBiocentro/CapaPresentacion/CapaPresentacion.csproj
@@ -1780,6 +1780,9 @@
       <Name>CapaNegocio</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
