--- a/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="INegocioService.cs" />
     <Compile Include="NegocioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguritySystem.cs" />
     <Compile Include="UtilMethods.cs" />
   </ItemGroup>
   <ItemGroup>
