--- a/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaNegocio/CapaNegocio.csproj
@@ -33,6 +33,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +47,7 @@
     <Compile Include="NegocioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeguritySystem.cs" />
+    <Compile Include="TokenSecurity.cs" />
     <Compile Include="UtilMethods.cs" />
   </ItemGroup>
   <ItemGroup>
