--- a/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/CapaServicioPresentacionWeb.csproj
+++ b/ProyectoIntegracionBiocentro/CapaServicioPresentacionWeb/CapaServicioPresentacionWeb.csproj
@@ -128,6 +128,7 @@
     <Content Include="Biocentro\paginas\intranet\Login.aspx" />
     <Content Include="Biocentro\paginas\intranet\PaginaPrincipal.aspx" />
     <Content Include="Biocentro\paginas\MasterPage.Master" />
+    <Content Include="Biocentro\paginas\reservar_hora\DetalleHora.aspx" />
     <Content Include="Connected Services\ServiceCliente\CapaServicioPresentacionWeb.ServiceCliente.Empleado.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
@@ -1777,6 +1778,13 @@
     </Compile>
     <Compile Include="Biocentro\paginas\reservar_hora\DatosPaciente.aspx.designer.cs">
       <DependentUpon>DatosPaciente.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Biocentro\paginas\reservar_hora\DetalleHora.aspx.cs">
+      <DependentUpon>DetalleHora.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Biocentro\paginas\reservar_hora\DetalleHora.aspx.designer.cs">
+      <DependentUpon>DetalleHora.aspx</DependentUpon>
     </Compile>
     <Compile Include="Biocentro\paginas\reservar_hora\HorasDisponibles.aspx.cs">
       <DependentUpon>HorasDisponibles.aspx</DependentUpon>
