Crear vista detalle reserva, agregar utilidad e-mail, validar sin horas

--- a/ProyectoIntegracionBiocentro/CapaServicio/CapaServicio.csproj
+++ b/ProyectoIntegracionBiocentro/CapaServicio/CapaServicio.csproj
@@ -79,6 +79,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\logo.jpg" />
     <Content Include="Web.config" />
     <Content Include="WebServiceCliente.asmx" />
   </ItemGroup>
